# N-Body-Gravitational-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_orbit.cpp
output/binary/: energy.csv  trajectory.csv
output/solar/: energy.csv  trajectory.csv
output/three_body/: energy.csv  trajectory.csv
scenarios/: binary_planet.json  solar_system.json  three_body.json
src/: Body.hpp  Config.cpp  Config.hpp  Integrator.cpp  Integrator.hpp  System.cpp  System.hpp  Vec3.hpp  main.cpp
viz/: __init__.py  __main__.py  animation.py  data.py  energy.py  style.py  trajectory.py  velocity.py
